fix the annoying jump from the top to the gallery when activating the overlay image

--- a/frontend/src/features/overlay-image/OverlayImage.less
+++ b/frontend/src/features/overlay-image/OverlayImage.less
@@ -2,7 +2,7 @@
 
 .component {
   z-index: 9999;
-  position: sticky;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
